Use sparse histograms on bluetooth adapter metrics

The bluetooth adapter metrics have very few possible error codes and
they are very spread apart so a sparse histogram is much more
appropriate then a regular histogram, which is what was used before,
and will save memory. These histograms are also now being tested.

Bug: 916754
Change-Id: I291829b898e3e00af1c71d00581fe91346dfa169
Reviewed-on: https://chromium-review.googlesource.com/c/1414615
Commit-Queue: James Hollyer <jameshollyer@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623863}