device/bluetooth/test/mock_bluetooth_cbdescriptor_mac.h
@@ -22,6 +22,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 - (void)simulateReadWithValue:(id)value error:(NSError*)error;
 - (void)simulateWriteWithError:(NSError*)error;
+- (void)simulateUpdateWithError:(NSError*)error;
 
 @end
 
