device/bluetooth/test/mock_bluetooth_cbperipheral_mac.h
@@ -39,12 +39,17 @@ class BluetoothTestMac;
 - (void)setState:(CBPeripheralState)state;
 - (void)removeAllServices;
 - (void)addServices:(NSArray*)services;
-- (void)didDiscoverServicesWithError:(NSError*)error;
+- (void)mockDidDiscoverServicesWithError:(NSError*)error;
 - (void)removeService:(CBService*)uuid;
 - (void)mockDidDiscoverServices;
+- (void)mockDidDiscoverCharacteristicsForService:(CBService*)service
+                                       WithError:(NSError*)error;
 - (void)mockDidDiscoverCharacteristicsForService:(CBService*)service;
 - (void)mockDidDiscoverDescriptorsForCharacteristic:
     (CBCharacteristic*)characteristic;
+- (void)mockDidDiscoverDescriptorsForCharacteristic:
+            (CBCharacteristic*)characteristic
+                                          WithError:(NSError*)error;
 - (void)mockDidDiscoverEvents;
 - (void)didModifyServices:(NSArray*)invalidatedServices;
 - (void)didDiscoverDescriptorsWithCharacteristic:
